Experiment with different paramters

--- a/python/DoaAnalysis.ipynb
+++ b/python/DoaAnalysis.ipynb
@@ -45,12 +45,12 @@
     "\n",
     "exp_name = '2021_10_12_doa_stepper'\n",
     "# experiment where we move laterally by 30cm, with fixed angle\n",
-    "#degree=0; distance=-300; motors=True; appendix=''\n",
+    "degree=0; distance=-300; motors=True; appendix=''\n",
     "#degree=0; distance=300; motors=False; appendix=\"\" \n",
     "\n",
     "# experiment where we rotate by 360 degress, at fixed distance\n",
     "#degree=-360; distance=15; motors=True; appendix=\"_new4\"\n",
-    "degree=360; distance=15; motors=False; appendix=\"_new\";\n",
+    "#degree=360; distance=15; motors=False; appendix=\"_new\";\n",
     "\n",
     "params = dict(\n",
     "    distance=distance,\n",
@@ -249,11 +249,12 @@
     "\n",
     "averaging = \"none\"\n",
     "alpha = 0.5\n",
-    "n_columns = 30 #len(df)\n",
+    "n_columns = 50 #len(df)\n",
     "\n",
     "angles = BeamFormer.theta_scan\n",
     "\n",
     "for num in [3]: #[2, 3, 4]:\n",
+    "    #combis = [(1, 2)]\n",
     "    combis = list(itertools.combinations(range(4), num))\n",
     "    n_combis = len(combis)\n",
     "\n",
@@ -375,8 +376,10 @@
     "mic_positions = df.iloc[0].mic_positions[mic_selection, :]\n",
     "beam_former = BeamFormer(mic_positions=mic_positions)\n",
     "\n",
+    "averaging = 'iir'\n",
+    "method = \"mvdr\"\n",
     "normalization_method = \"none\"\n",
-    "combination_n = 10\n",
+    "combination_n = 5\n",
     "beam_former.init_dynamic_estimate(\n",
     "    freqs, combination_n, combination_method, normalization_method\n",
     ")\n",
@@ -397,6 +400,8 @@
     "multi_spectrum = None\n",
     "\n",
     "with progressbar.ProgressBar(max_value=n_columns, redirect_stdout=True) as p:\n",
+    "    \n",
+    "    fig_mics, ax_mics = plt.subplots()\n",
     "    for i, (__, row) in enumerate(df.iterrows()):\n",
     "        signals_f = row.signals_f[:, [max_bin]]  # n_mics x n_freqs\n",
     "        signals_f = signals_f[mic_selection, :]\n",
@@ -447,6 +452,29 @@
     "            multi_spectrum = normalize_rows(multi_spectrum, method=\"zero_to_one\")\n",
     "        else:\n",
     "            print(\"not updating dynamic and multi:\", i)\n",
+    "            \n",
+    "        if i % 10 == 0:\n",
+    "            mics = beam_former.multi_mic_positions\n",
+    "            ax_mics.scatter(mics[:, 0], mics[:, 1], label=f\"time {time_sec:.1f}s\")\n",
+    "        if i and i % 10 == 0:\n",
+    "            fig_sigs, ax_sigs = plt.subplots(1, 2)\n",
+    "            fig_sigs.set_size_inches(10, 10)\n",
+    "            R_multi = beam_former.get_multi_R()\n",
+    "            #print(np.linalg.cond(R[0, :, :]))\n",
+    "            phases = np.angle(R_multi[0, :, :])\n",
+    "            assert np.allclose(np.diag(phases), 0)\n",
+    "            for i_sig in range(sigs.shape[1]):\n",
+    "                ax_sigs[0].matshow(phases)\n",
+    "                ax_sigs[1].matshow(np.abs(R_multi[0, :, :]))\n",
+    "                square = np.array([[0, 4, 4, 0, 0], [0, 0, 4, 4, 0]]) - 0.5\n",
+    "                for j in range(combination_n):\n",
+    "                    ax_sigs[0].plot(*square + 4 * j, color='red')\n",
+    "                    ax_sigs[1].plot(*square + 4 * j, color='red')\n",
+    "                ax_sigs[0].plot(*square + 4 * beam_former.index_multi, color='white')\n",
+    "                ax_sigs[1].plot(*square + 4 * beam_former.index_multi, color='white')\n",
+    "                #ax_sigs.scatter(np.angle(sigs[0, int(i_sig*4)+1]), [i], label=f\"signal {i_sig:.1f}s\")\n",
+    "                #ax_sigs.scatter(np.angle(sigs[0, int(i_sig*4)+2]), [i], label=f\"signal {i_sig:.1f}s\")\n",
+    "                #ax_sigs.scatter(np.angle(sigs[0, int(i_sig*4)+3]), [i], label=f\"signal {i_sig:.1f}s\")\n",
     "\n",
     "        #### RAW\n",
     "        raw_spectrum = combine_rows(raw_spectrum, combination_method, keepdims=True)\n",
@@ -462,6 +490,10 @@
     "            break\n",
     "\n",
     "        p.update(i)\n",
+    "    ax_mics.axis(\"equal\")\n",
+    "    ax_mics.grid()\n",
+    "    ax_mics.set_title(\"multi mic positions\")\n",
+    "    ax_mics.legend(loc=\"upper right\")\n",
     "\n",
     "    fig, axs = plt.subplots(1, 3, sharey=True, sharex=True)\n",
     "    plot_results(fig, axs)\n",
@@ -471,7 +503,7 @@
     "    fig, axs = plt.subplots(1, len(cuts_seconds), sharey=True)\n",
     "    fig.set_size_inches(15, 5)\n",
     "    for i, s in enumerate(cuts_seconds):\n",
-    "        idx = np.argmin(np.abs(times - s))\n",
+    "        idx = np.argmin(np.abs(df.second.values - s))\n",
     "        axs[i].plot(angles, raw_heatmap[:, idx], label=\"raw\")\n",
     "        axs[i].plot(angles, dynamic_heatmap[:, idx], label=\"dynamic\")\n",
     "        axs[i].plot(angles, multi_heatmap[:, idx], label=\"multi\")\n",
