Improved angle inference

--- a/python/DoaAnalysis.ipynb
+++ b/python/DoaAnalysis.ipynb
@@ -526,7 +526,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
