--- a/python/WallStudy.ipynb
+++ b/python/WallStudy.ipynb
@@ -24,7 +24,6 @@
     "from matplotlib import rcParams\n",
     "import matplotlib.font_manager\n",
     "\n",
-    "# print([k for k in rcParams.keys() if \"figure\" in k])\n",
     "plt.rcParams.update(\n",
     "    {\n",
     "        \"figure.figsize\": (10, 5),\n",
@@ -247,7 +246,7 @@
     "ax.set_title('distance range')\n",
     "#ax.legend(loc='upper left', bbox_to_anchor=[1.0, 1.0])\n",
     "ax.legend(loc='upper right')#, bbox_to_anchor=[1.0, 1.0])\n",
-    "save_fig(fig, 'plots/theory/limits_distances.pdf')"
+    "#save_fig(fig, 'plots/theory/limits_distances.pdf')"
    ]
   },
   {
@@ -293,7 +292,7 @@
     "ax.set_title(f'frequency ranges')# for $\\\\gamma\\\\in [{min_angle}, {max_angle}]$')\n",
     "#ax.legend(loc='upper left', bbox_to_anchor=[1.0, 1.0])\n",
     "ax.legend(loc='upper right')#, bbox_to_anchor=[1.0, 1.0])\n",
-    "save_fig(fig, f'plots/theory/limits_frequencies_min{min_angle}.pdf')"
+    "#save_fig(fig, f'plots/theory/limits_frequencies_min{min_angle}.pdf')"
    ]
   },
   {
@@ -324,7 +323,7 @@
     "ax.set_xlabel('velocity [cm/s]')\n",
     "ax.set_ylabel('minimum angle $\\gamma$ [deg]')\n",
     "ax.set_title(f'$N={N}$, $f_s={fs}$Hz')\n",
-    "save_fig(fig, 'plots/theory/limits_velocities.pdf')"
+    "#save_fig(fig, 'plots/theory/limits_velocities.pdf')"
    ]
   },
   {
@@ -422,14 +421,15 @@
    "source": [
     "from utils.simulation import get_freq_slice_pyroom, WIDEBAND_FILE, create_wideband_signal\n",
     "from crazyflie_description_py.parameters import N_BUFFER, FS\n",
+    "print(N_BUFFER)\n",
     "\n",
     "mic_idx = 1\n",
-    "distances = np.arange(10, 60, step=0.2)\n",
+    "distances = np.arange(10, 60, step=1)\n",
     "frequencies = np.fft.rfftfreq(N_BUFFER, 1 / FS)\n",
     "\n",
     "fname = \"results/df_matrix_pyroom.pkl\"\n",
     "try:\n",
-    "    raise\n",
+    "    raise \n",
     "    series_all = pd.read_pickle(fname)\n",
     "    print(\"read\", fname)\n",
     "    np.testing.assert_allclose(series_all.distances, distances)\n",
@@ -524,13 +524,13 @@
     "im = ax.pcolorfast(dist, freq, df_matrix_theo[freq_start:freq_end, dist_start:dist_end])\n",
     "ax.set_xlabel(\"distance [cm]\")\n",
     "ax.set_ylabel(\"frequency [Hz]\")\n",
-    "save_fig(fig, \"plots/theory/distance-frequency-matrix.png\", extension=\"png\")\n",
+    "#save_fig(fig, \"plots/theory/distance-frequency-matrix.png\", extension=\"png\")\n",
     "add_colorbar(fig, ax, im, title=\"amplitude [-]\")\n",
     "ax.set_title(\"interference matrix for azimuth $\\\\theta=0$\")\n",
     "ax.axhline(start_freq, color=\"C1\", label=\"distance slice\")\n",
     "ax.axvline(start_dist, color=\"C8\", label=\"frequency slice\")\n",
     "ax.legend(framealpha=1.0)\n",
-    "save_fig(fig, \"plots/theory/distance-frequency-matrix.pdf\")\n",
+    "#save_fig(fig, \"plots/theory/distance-frequency-matrix.pdf\")\n",
     "\n",
     "matrix_slices(\n",
     "    df_matrix_theo[freq_start:freq_end, dist_start:dist_end],\n",
@@ -538,7 +538,7 @@
     "    dist,\n",
     "    start_freq=start_freq,\n",
     "    start_dist=start_dist,\n",
-    "    saveas=\"plots/theory/distance-frequency-slices.pdf\",\n",
+    "    saveas=\"\"#\"plots/theory/distance-frequency-slices.pdf\",\n",
     ")"
    ]
   },
@@ -553,7 +553,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -887,7 +887,7 @@
    },
    "outputs": [],
    "source": [
-    "from utils.inference import get_approach_angle_fft, get_gamma_distribution\n",
+    "from utils.inference import get_approach_angle_fft\n",
     "from utils.simulation import factor_distance_to_delta, get_df_theory_simple\n",
     "from utils.geometry import get_deltas_from_global\n",
     "from utils.estimators import get_estimate, AngleEstimator\n",
@@ -925,20 +925,12 @@
     "        factor_max = factor_distance_to_delta(min(distances_cm), rel_movement_cm, mic_idx, azimuth_deg)\n",
     "        factor = (factor_max + factor_min)/2\n",
     "        print(f'mic{mic_idx}: factor {factor:.4f}, {factor_max:.4f} to {factor_min:.4f}')\n",
-    "        ratios, probs = get_approach_angle_fft(\n",
+    "        gammas_deg, probs = get_approach_angle_fft(\n",
     "            slice_d,\n",
     "            frequency,\n",
     "            relative_distances_cm,\n",
     "            n_max=n_max, bayes=True,\n",
     "        )\n",
-    "        axs[0].plot(\n",
-    "            ratios, \n",
-    "            probs,\n",
-    "            label=f'mic{mic_idx}',\n",
-    "            color=f'C{mic_idx}'\n",
-    "        )\n",
-    "        axs[0].set_xlim(0, 2)\n",
-    "        gammas_deg, probs = get_gamma_distribution(ratios, probs)\n",
     "        gamma_est = get_estimate(gammas_deg, probs)\n",
     "        \n",
     "        angle_estimator.add_distribution(gammas_deg, probs, mic_idx=mic_idx, frequency=frequency)\n",
@@ -951,11 +943,11 @@
     "        )\n",
     "        axs[1].axvline(gamma_est, color=f'C{mic_idx}', ls=':')\n",
     "        \n",
-    "    gammas_deg, probs =  angle_estimator.get_angle_distribution()\n",
-    "    gamma_est = get_estimate(gammas_deg, probs)\n",
+    "    gammas_deg_all, probs_all =  angle_estimator.get_angle_distribution()\n",
+    "    gamma_est = get_estimate(gammas_deg_all, probs_all)\n",
     "    axs[1].plot(\n",
-    "        gammas_deg, \n",
-    "        probs,\n",
+    "        gammas_deg_all, \n",
+    "        probs_all,\n",
     "        label=f'all: {gamma_est:.0f}',\n",
     "        color=f'k'\n",
     "    )\n",
