Change moving estimator to act on differences instead of distances/angles

--- a/python/DistanceFlying.ipynb
+++ b/python/DistanceFlying.ipynb
@@ -161,6 +161,7 @@
    "source": [
     "def plot_matrix(yvalues, results_matrix, xvalues, no_deco=False, angles=False):\n",
     "    estimates = get_estimates(results_matrix, yvalues)\n",
+    "    n_points = results_matrix.shape[1]\n",
     "    fig, ax = plt.subplots()\n",
     "    fig.set_size_inches(2 * FIGSIZE, FIGSIZE)\n",
     "    im = pcolorfast_custom(\n",
@@ -208,7 +209,7 @@
     "\n",
     "def get_estimates(results_matrix, dists_cm):\n",
     "    valid = np.any(results_matrix > 0, axis=0)\n",
-    "    d_estimates = dists_cm[np.argmax(results_matrix, axis=0)]\n",
+    "    d_estimates = dists_cm[np.argmax(results_matrix, axis=0)].astype(np.float)\n",
     "    d_estimates[~valid] = np.nan\n",
     "    return d_estimates"
    ]
@@ -276,8 +277,8 @@
     "\n",
     "calib_method_list = [\"on_the_fly\"] \n",
     "#calib_method_list = [\"stepper\"]\n",
-    "# mic_list = [[0], [1], [2], [3]]\n",
-    "mic_list = [[0, 1, 2, 3]] #[[1, 3], [0, 2], [0, 1, 3], [0, 1, 2, 3]]\n",
+    "#mic_list = [[1, 3], [0, 2], [0, 1, 3], [0, 1, 2, 3]]\n",
+    "mic_list = [[0, 1, 2, 3]]\n",
     "algorithm_list = [\"bayes\"]#, \"cost\"]\n",
     "no_deco = False\n",
     "\n",
@@ -364,25 +365,25 @@
     "                inf_machine.filter_out_freqs(freq_ranges=bad_freqs)\n",
     "                \n",
     "                t1 = time.time()\n",
+    "                diff_moving = {}\n",
     "                for mic_idx in mics:\n",
     "                    dist, prob_mic, diff = inf_machine.do_inference(algorithm, mic_idx)\n",
     "                    distance_estimator.add_distribution(diff * 1e-2, prob_mic, mic_idx)\n",
+    "                    diff_moving[mic_idx] = (diff, prob_mic)\n",
     "\n",
     "                __, prob = distance_estimator.get_distance_distribution(\n",
     "                    distances_m=dists_cm * 1e-2, verbose=False, azimuth_deg=azimuth_deg,\n",
     "                )\n",
     "                time_single += int(1000*(time.time() - t1))\n",
     "                \n",
-    "\n",
     "                t1 = time.time()\n",
     "                moving_estimator.add_distributions(\n",
-    "                    dist_cm=dists_cm, dist_p=prob, position_cm=positions_cm[i], rot_deg=yaws_deg[i]\n",
+    "                    diff_moving, position_cm=positions_cm[i], rot_deg=yaws_deg[i]\n",
     "                )\n",
     "                __, prob_moving = moving_estimator.get_distance_distribution(\n",
     "                    distances_cm=dists_cm\n",
     "                )\n",
     "                time_moving += int(1000*(time.time() - t1))\n",
-    "                \n",
     "                \n",
     "                dist_est_cm = dists_cm[np.argmax(prob_moving)]\n",
     "                __, prob_angle = distance_estimator.get_angle_distribution(\n",
@@ -457,12 +458,16 @@
     "X = gtsam.symbol_shorthand.X\n",
     "P = gtsam.symbol_shorthand.P\n",
     "\n",
-    "wall_backend = WallBackend()\n",
+    "wall_backend = WallBackend(use_isam=True)\n",
     "yaw_start = np.pi \n",
     "\n",
     "use_groundtruth = False\n",
     "\n",
+    "d_estimates = []\n",
+    "d_gt = []\n",
+    "\n",
     "for i, prob_dists in enumerate(results_matrix_moving.T):\n",
+    "    t1 = time.time()\n",
     "    if i < n_calib:\n",
     "        continue\n",
     "    prob_angles = results_matrix_angles[:, i]\n",
@@ -489,6 +494,19 @@
     "        print(e)\n",
     "    \n",
     "    wall_backend.check_wall(verbose=True)\n",
+    "    d_estimates.append(wall_backend.get_distance_estimate() * 1e2)\n",
+    "    d_gt.append(distance_gt)\n",
+    "    print(f\"time with isam={wall_backend.use_isam}: {(time.time() - t1)*1e3:.0f}ms\")\n",
+    "\n",
+    "errors_df.loc[len(errors_df), :] = {\n",
+    "    \"algorithm\": algorithm + f\"_win{n_window}_factorgraph\",\n",
+    "    \"mics\": mics_str,\n",
+    "    \"calib_method\": calib_method,\n",
+    "    \"estimates\": d_estimates,\n",
+    "    \"distances\": d_gt,\n",
+    "    \"appendix\": appendix,\n",
+    "    \"time\": time_moving / n_points \n",
+    "}\n",
     "    \n",
     "plot_projections(wall_backend.all_initial_estimates, axis_length=0.2, ls=\":\", perspective=False, side=True)\n",
     "plt.show()\n",
@@ -524,7 +542,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -532,12 +550,13 @@
     "\n",
     "#exp_name = '2021_10_12_flying'\n",
     "\n",
-    "fname = f'../datasets/{exp_name}/results.pkl'\n",
-    "errors_df = pd.read_pickle(fname)\n",
+    "#fname = f'../datasets/{exp_name}/results.pkl'\n",
+    "#errors_df = pd.read_pickle(fname)\n",
     "\n",
-    "chosen_mics = '[0,1,2,3]'\n",
+    "#chosen_mics = '[0,1,2,3]'\n",
+    "#filtered_df = errors_df.loc[errors_df.mics==chosen_mics]\n",
     "\n",
-    "filtered_df = errors_df.loc[errors_df.mics==chosen_mics]\n",
+    "filtered_df = errors_df \n",
     "groupby = ['mics', 'algorithm']\n",
     "\n",
     "total_err_dict = {}\n",
@@ -549,12 +568,12 @@
     "    errors_all = []\n",
     "    distances_all = []\n",
     "    for i, row in df.iterrows():\n",
-    "        errors = row.estimates - row.distances\n",
+    "        errors = np.array(row.estimates) - np.array(row.distances)\n",
     "        key = ' '.join(row.drop(['distances', 'estimates', 'time'] + groupby).values)\n",
     "        err_dict[key] = errors\n",
     "        dist_dict[key] = row.distances\n",
     "        errors_all += list(errors[~np.isnan(errors)])\n",
-    "        distances_all += list(row.distances[~np.isnan(errors)])\n",
+    "        distances_all += list(np.array(row.distances)[~np.isnan(errors)])\n",
     "        \n",
     "    sort_idx = np.argsort(distances_all)\n",
     "    total_err_dict[j] = {\n",
@@ -596,8 +615,8 @@
     "fig, axs = plot_performance(err_dict, xs_dict=dist_dict, xlabel=\"distance [cm]\", ylabel=\"error [cm]\", marker_flag=False)\n",
     "axs[0].get_legend().set_visible(False)\n",
     "plot_random(axs, range(10, max_dist))\n",
-    "fig.suptitle(f'overall performacne mics {chosen_mics} up to {max_dist}cm')\n",
-    "save_fig(fig, f'plots/experiments/{exp_name}_{chosen_mics}_cdf.pdf')"
+    "fig.suptitle(f'overall performance up to {max_dist}cm')\n",
+    "save_fig(fig, f'plots/experiments/{exp_name}_cdf.pdf')"
    ]
   },
   {
@@ -610,12 +629,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "azimuth_deg = WALL_ANGLE_DEG\n",
-    "n_calib = 5\n",
-    "n_window = 3\n",
+    "n_calib = 10\n",
+    "n_window = 5\n",
     "\n",
     "exp_name = \"2021_11_23_demo\"\n",
     "motors = \"live\"\n",
@@ -623,6 +644,9 @@
     "\n",
     "calib_method = \"on_the_fly\"\n",
     "mics = [0, 1, 2, 3]\n",
+    "#mics = [3] # towards\n",
+    "#mics = [0] # towards\n",
+    "#mics = [2] # back\n",
     "algorithm = \"cost\" #\"bayes\"\n",
     "\n",
     "calib_flag = False\n",
@@ -632,6 +656,8 @@
     "    (results_df.appendix == appendix) & (results_df.motors == motors), :\n",
     "].iloc[0]\n",
     "\n",
+    "n_timesteps = 25\n",
+    "\n",
     "# extract flying indices and convert positions\n",
     "freqs = row.frequencies_matrix[0, :]\n",
     "positions_cm, yaws_deg = get_positions_flying(row, start_distance_cm=110)\n",
@@ -639,10 +665,14 @@
     "positions_cm = positions_cm[mask_flying, :]\n",
     "yaws_deg = yaws_deg[mask_flying]\n",
     "magnitudes = np.abs(row.stft[mask_flying, :, :])[..., freqs>0] # n_times x n_mics x freqs\n",
-    "distances = positions_cm[:, 1]\n",
+    "distances = positions_cm[:n_timesteps, 1]\n",
     "freqs = freqs[freqs>0]\n",
+    "angles_deg = np.arange(-180, 180, step=5)\n",
     "\n",
-    "n_points = magnitudes.shape[0]\n",
+    "\n",
+    "wall_backend = WallBackend(use_isam=True)\n",
+    "d_estimates = []\n",
+    "yaw_start = np.pi \n",
     "\n",
     "if not calib_flag:\n",
     "    calib_values = np.median(magnitudes[:n_calib, :, :], axis=0)\n",
@@ -662,17 +692,17 @@
     "\n",
     "magnitudes_calib = magnitudes / calib_values\n",
     "\n",
-    "results_matrix = np.full((len(dists_cm), n_points), np.nan)\n",
-    "results_matrix_angles = np.full((len(azimuths_deg), n_points), np.nan)\n",
-    "results_matrix_moving = np.full((len(dists_cm), n_points), np.nan)\n",
+    "print(len(angles_deg))\n",
+    "results_matrix_angles = np.full((len(angles_deg), n_timesteps), np.nan)\n",
+    "results_matrix_moving = np.full((len(dists_cm), n_timesteps), np.nan)\n",
     "\n",
     "moving_estimator = MovingEstimator(n_window=n_window)\n",
-    "for i in range(n_points):\n",
-    "\n",
+    "for i in range(n_timesteps):\n",
+    "    \n",
     "    # important to reinitialize!\n",
     "    distance_estimator = DistanceEstimator()\n",
     "\n",
-    "    rel_dist = 5\n",
+    "    rel_dist = 0#5\n",
     "    inf_machine.add_data(\n",
     "        magnitudes_calib[i],\n",
     "        freqs,\n",
@@ -700,23 +730,43 @@
     "    time_moving += int(1000*(time.time() - t1))\n",
     "\n",
     "    dist_est_cm = dists_cm[np.argmax(prob_moving)]\n",
-    "    __, prob_angle = distance_estimator.get_angle_distribution(\n",
-    "        distance_estimate_m=dist_est_cm*1e-2\n",
-    "    )\n",
+    "    #__, prob_angle = distance_estimator.get_angle_distribution(\n",
+    "    #    distance_estimate_m=dist_est_cm*1e-2\n",
+    "    #)\n",
     "\n",
     "    # can also use this, but need to add angle_distribution above. \n",
-    "    #azimuths_deg, prob_angle = moving_estimator.get_angle_distribution(\n",
-    "    #    angles_deg=azimuths_deg\n",
-    "    #)\n",
+    "    #test = moving_estimator.get_angle_distribution(angles_deg)\n",
+    "    __, prob_angle = moving_estimator.get_angle_distribution(\n",
+    "        angles_deg=angles_deg\n",
+    "    )\n",
+    "    \n",
     "    results_matrix_moving[:, i] = prob_moving \n",
     "    results_matrix_angles[:, i] = prob_angle\n",
     "\n",
-    "a_estimates = get_estimates(results_matrix_angles, azimuths_deg)\n",
+    "    if i < n_calib:\n",
+    "        d_estimates.append(None)\n",
+    "        continue\n",
+    "        \n",
+    "    # factor graph inference\n",
+    "    position_cm = positions_cm[i, :] - positions_cm[n_calib, :]\n",
+    "    yaw = yaw_start - (yaws_deg[i] / 180 * np.pi)\n",
+    "    \n",
+    "    print(f\"adding pose...{yaw * 180 / np.pi:.0f}, {position_cm[0]:.0f}, {position_cm[1]:.0f}\")\n",
+    "    pose_factor = wall_backend.add_pose(r_world=position_cm * 1e-2,  yaw=yaw)\n",
+    "    #try:\n",
+    "    wall_backend.add_planes_from_distributions(dists_cm, prob_dists, angles_deg, prob_angle, n_estimates=1, verbose=False)\n",
+    "    #except Exception as e:\n",
+    "    #    print(e)\n",
+    "    wall_backend.check_wall(verbose=True)\n",
+    "    d_estimates.append(wall_backend.get_distance_estimate() * 1e2)\n",
+    "\n",
+    "a_estimates = get_estimates(results_matrix_angles, angles_deg)\n",
     "gt_angles = np.full(len(distances), 90)\n",
-    "fig, ax = plot_matrix(azimuths_deg, results_matrix_angles, gt_angles, no_deco=no_deco)\n",
-    "add_rect(ax, n_calib, max(azimuths_deg), no_deco=no_deco)\n",
+    "fig, ax = plot_matrix(angles_deg, results_matrix_angles, gt_angles, no_deco=no_deco, angles=True)\n",
+    "add_rect(ax, n_calib, max(angles_deg), no_deco=no_deco)\n",
     "\n",
     "fig, ax = plot_matrix(dists_cm, results_matrix_moving, distances, no_deco=no_deco)\n",
+    "ax.plot(np.arange(len(distances)), d_estimates, color='r')\n",
     "add_rect(ax, n_calib, max(dists_cm), no_deco=no_deco)\n",
     "#save_fig(fig, plot_name + f\"_win{n_window}_probabilities.pdf\")"
    ]
@@ -726,7 +776,87 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "prob_angle = []\n",
+    "for angle, distributions in test.items():\n",
+    "    #plt.figure()\n",
+    "    probs_all = None\n",
+    "    for previous, probs in distributions.items():\n",
+    "        #plt.plot(probs, label=previous)\n",
+    "        if probs_all is None:\n",
+    "            probs_all = np.array(probs).reshape((1, -1))\n",
+    "        else:\n",
+    "            probs_all = np.r_[probs_all, np.array(probs).reshape((1, -1))]\n",
+    "    prob_all = np.product(probs_all, axis=0)\n",
+    "    prob_all /= np.sum(prob_all)\n",
+    "    prob_angle.append(np.max(prob_all))\n",
+    "    #plt.plot(prob_all, label=f\"all, max={np.max(prob_all):.3f}\")\n",
+    "    #plt.title(angle)\n",
+    "    #plt.legend()\n",
+    "    \n",
+    "plt.figure()\n",
+    "plt.plot(angles_deg, np.log10(prob_angle))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### alternative angle calculation: geometric averaging based on mic level differences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mic_angles = np.array([90, 180, -90, 0])\n",
+    "mics = [0, 1, 2, 3]\n",
+    "\n",
+    "total = np.sum(magnitudes[:, :, :]**2, axis=(0, 2))\n",
+    "powers = np.sum(magnitudes[:, mics]**2, axis=2) / total[None, :]\n",
+    "\n",
+    "fig = plt.figure()\n",
+    "for i, mic in enumerate(mics): #range(powers.shape[1]):\n",
+    "    plt.plot(range(powers.shape[0]), powers[:, i], label=f\"mic{mic}\")\n",
+    "plt.legend()\n",
+    "fig.set_size_inches(10, 5)\n",
+    "\n",
+    "fig = plt.figure()\n",
+    "norm = powers[:] / np.mean(powers, axis=1)[:, None]\n",
+    "print(norm[0, :])\n",
+    "\n",
+    "angle_vectors = np.array([[np.cos(a / 180 * np.pi), np.sin(a / 180 * np.pi)] for a in mic_angles[mics]])\n",
+    "vectors = norm.dot(angle_vectors)\n",
+    "angles = np.arctan2(vectors[:, 1], vectors[:, 0]) * 180 / np.pi\n",
+    "weights = np.linalg.norm(vectors, axis=1)\n",
+    "\n",
+    "significant = np.where(weights > 0.2)[0]\n",
+    "\n",
+    "fig = plt.figure()\n",
+    "plt.plot(range(powers.shape[0]), angles, label=f\"all\")\n",
+    "plt.scatter(significant, angles[significant], label=f\"significant\")\n",
+    "fig.set_size_inches(10, 5)\n",
+    "\n",
+    "fig = plt.figure()\n",
+    "plt.plot(range(powers.shape[0]), weights, label=f\"mic{mic}\")\n",
+    "fig.set_size_inches(10, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_projections(wall_backend.all_initial_estimates, axis_length=0.2, ls=\":\", perspective=False, side=True)\n",
+    "plt.show()\n",
+    "plot_projections(wall_backend.result, axis_length=0.1, perspective=False, side=True)\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
