--- a/python/WallStudy.ipynb
+++ b/python/WallStudy.ipynb
@@ -421,51 +421,12 @@
    "source": [
     "from utils.simulation import get_freq_slice_pyroom, WIDEBAND_FILE, create_wideband_signal\n",
     "from crazyflie_description_py.parameters import N_BUFFER, FS\n",
-    "print(N_BUFFER)\n",
+    "\n",
+    "print(FS)\n",
     "\n",
     "mic_idx = 1\n",
     "distances = np.arange(10, 60, step=1)\n",
     "frequencies = np.fft.rfftfreq(N_BUFFER, 1 / FS)\n",
-    "\n",
-    "fname = \"results/df_matrix_pyroom.pkl\"\n",
-    "try:\n",
-    "    raise \n",
-    "    series_all = pd.read_pickle(fname)\n",
-    "    print(\"read\", fname)\n",
-    "    np.testing.assert_allclose(series_all.distances, distances)\n",
-    "    np.testing.assert_allclose(series_all.frequencies, frequencies)\n",
-    "    df_matrix = series_all.df_matrix\n",
-    "except Exception as e:\n",
-    "    import progressbar\n",
-    "    df_matrix = np.zeros((len(frequencies), len(distances)))\n",
-    "    \n",
-    "    try:\n",
-    "        raise\n",
-    "        signal = np.load(WIDEBAND_FILE)\n",
-    "    except:\n",
-    "        print(\"creating wideband signal...\")\n",
-    "        signal = create_wideband_signal(frequencies)\n",
-    "        np.save(WIDEBAND_FILE, signal)\n",
-    "        print(f\"saved as {WIDEBAND_FILE}\")\n",
-    "\n",
-    "    with progressbar.ProgressBar(max_value=len(distances) - 1) as bar:\n",
-    "        for j, distance_cm in enumerate(distances):\n",
-    "            slice_mics = get_freq_slice_pyroom(frequencies, distance_cm, signal)\n",
-    "            df_matrix[:, j] = slice_mics[mic_idx]\n",
-    "            bar.update(j)\n",
-    "    series = pd.Series(\n",
-    "        {\"df_matrix\": df_matrix, \"distances\": distances, \"frequencies\": frequencies}\n",
-    "    )\n",
-    "    pd.to_pickle(series, fname)\n",
-    "    print(\"saved as\", fname)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "min_freq = 100\n",
     "max_freq = 5000\n",
     "min_dist = 1\n",
@@ -485,14 +446,93 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "fname = \"results/df_matrix_pyroom.pkl\"\n",
+    "try:\n",
+    "    raise \n",
+    "    series_all = pd.read_pickle(fname)\n",
+    "    print(\"read\", fname)\n",
+    "    np.testing.assert_allclose(series_all.distances, distances)\n",
+    "    np.testing.assert_allclose(series_all.frequencies, frequencies)\n",
+    "    df_matrix = series_all.df_matrix\n",
+    "except Exception as e:\n",
+    "    import progressbar\n",
+    "    df_matrix = np.zeros((len(freq), len(dist)))\n",
+    "    \n",
+    "    try:\n",
+    "        raise\n",
+    "        signal = np.load(WIDEBAND_FILE)\n",
+    "    except:\n",
+    "        print(\"creating wideband signal...\")\n",
+    "        signal = create_wideband_signal(freq)\n",
+    "        np.save(WIDEBAND_FILE, signal)\n",
+    "        print(f\"saved as {WIDEBAND_FILE}\")\n",
+    "\n",
+    "    with progressbar.ProgressBar(max_value=len(dist) - 1) as bar:\n",
+    "        for j, distance_cm in enumerate(dist):\n",
+    "            slice_mics = get_freq_slice_pyroom(freq, distance_cm, signal)\n",
+    "            df_matrix[:, j] = slice_mics[mic_idx]\n",
+    "            bar.update(j)\n",
+    "    series = pd.Series(\n",
+    "        {\"df_matrix\": df_matrix, \"distances\": dist, \"frequencies\": freq}\n",
+    "    )\n",
+    "    pd.to_pickle(series, fname)\n",
+    "    print(\"saved as\", fname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "fig, ax = plt.subplots()\n",
     "fig.set_size_inches(10, 5)\n",
-    "ax.pcolorfast(dist, freq, df_matrix[freq_start:freq_end, dist_start:dist_end])\n",
+    "ax.pcolorfast(dist, freq, df_matrix)\n",
     "plt.xlabel(\"distance [cm]\")\n",
     "plt.ylabel(\"frequency [Hz]\")\n",
-    "matrix_slices(\n",
-    "    df_matrix[freq_start:freq_end, dist_start:dist_end], freq, dist, #ymin=8, ymax=20,\n",
-    ")"
+    "matrix_slices(df_matrix, freq, dist)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## play around with beamforming before creating interference matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils.geometry import Context\n",
+    "from utils.simulation import generate_room, get_buffers\n",
+    "from audio_stack.beam_former import BeamFormer\n",
+    "\n",
+    "context = Context.get_platform_setup()\n",
+    "beamformer = BeamFormer(mic_positions=context.mics)\n",
+    "\n",
+    "df_matrix_beamformed = np.empty((len(frequencies), len(dist)))\n",
+    "for j, distance_cm in enumerate(dist):\n",
+    "    room = generate_room(distance_cm=distance_cm)\n",
+    "    signals_f = get_buffers(room, signal, n_times=2) # 1 x 4 x n_freqs\n",
+    "    signals_f = signals_f[0, :, :].T\n",
+    "    \n",
+    "    # combine mics signals with beamforming. \n",
+    "    #coeffs = beamformer.beamform_das(np.pi/2, frequencies_hz=frequencies)\n",
+    "    R = beamformer.get_correlation(signals_f)\n",
+    "    coeffs = beamformer.beamform_mvdr(R, np.pi/2, frequencies_hz=frequencies)\n",
+    "    slice_total = np.sum(np.multiply(coeffs, signals_f), axis=1)\n",
+    "    df_matrix_beamformed[:, j] = np.abs(slice_total) ** 2\n",
+    "    \n",
+    "fig, ax = plt.subplots()\n",
+    "ax.pcolorfast(dist, freq, df_matrix_beamformed[freq_start:freq_end, :])\n",
+    "gains = np.mean(df_matrix_beamformed[freq_start:freq_end, 5:], axis=1)\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.pcolorfast(dist, freq, df_matrix_beamformed[freq_start:freq_end, :]/gains[:, None])\n",
+    "plt.figure()\n",
+    "plt.plot(freq, gains)"
    ]
   },
   {
