--- a/python/deprecated/WindowAnalysis.ipynb
+++ b/python/deprecated/WindowAnalysis.ipynb
@@ -35,12 +35,12 @@
    "outputs": [],
    "source": [
     "def get_window_name(row):\n",
-    "    from audio_stack.parameters import WINDOW_TYPES\n",
+    "    from audio_stack.parameters import WINDOW_NAMES\n",
     "    try:\n",
     "        window_number = int(row.appendix.replace(\"_window\", \"\"))\n",
     "    except:\n",
     "        window_number = 3\n",
-    "    return WINDOW_TYPES[window_number]"
+    "    return WINDOW_NAMES[window_number]"
    ]
   },
   {
