--- a/python/factor_graph/GTSAM.ipynb
+++ b/python/factor_graph/GTSAM.ipynb
@@ -339,8 +339,10 @@
     "    graph.push_back(factor)\n",
     "    print(f\"Added prior factor to pose {t}: {pose_t.translation().round(3)}\")\n",
     "    \n",
+    "    \n",
     "    # plane measurements\n",
     "    plane_meas, azimuth, elevation, distance = wall_simulation.measure_plane()\n",
+    "    \n",
     "    factor = PlaneFactor(plane_meas.planeCoefficients(), plane_confidence, X(t), P(0))\n",
     "    graph.push_back(factor)\n",
     "    print(f\"Added plane factor from pose {t} with distance: {plane_meas.distance():.2f}\")"
@@ -478,7 +480,6 @@
     "    factor = PlaneFactor(plane_meas.planeCoefficients(), plane_noise, X(t), P(0))\n",
     "    factors.push_back(factor)\n",
     "    \n",
-    "    \n",
     "    isam.update(factors, initial_estimates)\n",
     "    \n",
     "    new_result = isam.calculateEstimate()\n",
@@ -540,13 +541,71 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## First attempts to implement custom Planar SLAM factor"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import gtsam\n",
+    "import numpy as np\n",
+    "from typing import List\n",
+    "\n",
+    "expected = Rot3.Quaternion(1, 1, 1, 1)\n",
+    "\n",
+    "def error_func(this: gtsam.CustomFactor, v: gtsam.Values, H: List[np.ndarray]):\n",
+    "    \"\"\"\n",
+    "    Error function that mimics a BetweenFactor\n",
+    "    :param this: reference to the current CustomFactor being evaluated\n",
+    "    :param v: Values object\n",
+    "    :param H: list of references to the Jacobian arrays\n",
+    "    :return: the non-linear error\n",
+    "    \"\"\"\n",
+    "    key0 = this.keys()[0] # plane\n",
+    "    key1 = this.keys()[1] # pose\n",
+    "    rot3, pose3 = v.atRot3(key0), v.atPose3(key1)\n",
+    "    \n",
+    "    # TODO: probably this can be done differently. \n",
+    "    error = gtsam.Rot3.Logmap(gtsam.Rot3(*pose3.matrix().dot(rot3.quaternion())) * expected)\n",
+    "    if H is not None:\n",
+    "        result = error\n",
+    "        H[0] = np.zeros((3, 3)) # TODO: jacobian with respect to plane\n",
+    "        H[1] = np.zeros((3, 6)) # TODO: jacobian with respect to pose\n",
+    "    return error\n",
+    "\n",
+    "noise_model = gtsam.noiseModel.Unit.Create(3)\n",
+    "factor = gtsam.CustomFactor(noise_model, [P(0), X(0)], error_func)\n",
+    "\n",
+    "graph = gtsam.NonlinearFactorGraph()\n",
+    "graph.push_back(factor)\n",
+    "\n",
+    "initial_estimate = gtsam.Values()\n",
+    "initial_estimate.insert(P(0), rot3)\n",
+    "initial_estimate.insert(X(0), pose3)\n",
+    "optimizer = gtsam.LevenbergMarquardtOptimizer(graph, initial_estimate)\n",
+    "result = optimizer.optimize()\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gtsam\n",
+    "pose3 = gtsam.Pose3()\n",
+    "rot3 = gtsam.Rot3()\n",
+    "rot3_local_quat = pose3.matrix().dot(rot3.quaternion())\n",
+    "rot3_local = gtsam.Rot3(*rot3_local_quat)\n",
+    "rot_error = rot3_local * rot3"
+   ]
   },
   {
    "cell_type": "code",
