--- a/python/DistanceFlying.ipynb
+++ b/python/DistanceFlying.ipynb
@@ -152,7 +152,7 @@
     "\n",
     "def get_estimates(results_matrix, dists_cm):\n",
     "    valid = np.any(results_matrix > 0, axis=0)\n",
-    "    d_estimates = dists_cm[np.argmax(results_matrix, axis=0)].astype(np.float)\n",
+    "    d_estimates = dists_cm[np.argmax(results_matrix, axis=0)].astype(float)\n",
     "    d_estimates[~valid] = np.nan\n",
     "    return d_estimates"
    ]
@@ -306,7 +306,7 @@
     "\n",
     "    inf_machine = Inference()\n",
     "    dists_cm = DistanceEstimator.DISTANCES_M * 1e2\n",
-    "    azimuths_deg = DistanceEstimator.AZIMUTHS_DEG.astype(np.float)\n",
+    "    azimuths_deg = DistanceEstimator.AZIMUTHS_DEG.astype(float)\n",
     "    inf_machine.add_geometry([dists_cm[0], dists_cm[-1]], WALL_ANGLE_DEG)\n",
     "\n",
     "    for calib_method in calib_method_list:\n",
@@ -336,18 +336,11 @@
     "                # important to reinitialize!\n",
     "                distance_estimator = DistanceEstimator()\n",
     "\n",
-    "                # TODO(FD) figure out if below helps\n",
-    "                #if i < (n_points - 1):\n",
-    "                #    rel_dist = distances[i+1] - distances[i]\n",
-    "                #else:\n",
-    "                rel_dist = 5\n",
     "                inf_machine.add_data(\n",
     "                    values_unsorted_calib[i],\n",
     "                    freqs,\n",
-    "                    distances=-np.linspace(0, rel_dist, len(freqs)),\n",
     "                )\n",
     "                \n",
-    "                # TODO(FD) check again if this helps...\n",
     "                inf_machine.filter_out_freqs(freq_ranges=bad_freqs)\n",
     "                \n",
     "                t1 = time.time()\n",
@@ -467,6 +460,7 @@
     "n_estimates = 1\n",
     "print(angle_matrix.shape, dist_matrix.shape)\n",
     "\n",
+    "# below doesn't work well\n",
     "#angles_deg = DistanceEstimator.AZIMUTHS_DEG\n",
     "#dists_cm = DistanceEstimator.DISTANCES_M * 1e2\n",
     "#dist_matrix = results_matrix\n",
@@ -1302,7 +1296,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1316,7 +1310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.12"
   },
   "toc": {
    "base_numbering": 1,
