Upgrade to ros2 galactic

--- a/python/DistanceFlying.ipynb
+++ b/python/DistanceFlying.ipynb
@@ -174,7 +174,7 @@
    "source": [
     "def extract_valid(row, wall_y_cm=100, forward_only=True):\n",
     "    positions_cm = row.positions[:, :3] * 1e2 #get_positions_flying(row, start_distance_cm=95)\n",
-    "    yaws_deg = row.positions[:, 2]\n",
+    "    yaws_deg = row.positions[:, 3]\n",
     "    \n",
     "    freqs = row.frequencies_matrix[0, :]\n",
     "    \n",
@@ -640,13 +640,13 @@
    },
    "outputs": [],
    "source": [
-    "azimuth_deg = WALL_ANGLE_DEG\n",
-    "n_calib = 10\n",
-    "n_window = 3\n",
+    "from crazyflie_demo.wall_detection import FLYING_HEIGHT_CM, N_CALIBRATION, N_WINDOW\n",
+    "\n",
+    "print(N_CALIBRATION, N_WINDOW)\n",
     "\n",
     "exp_name = \"2021_11_23_demo\"\n",
     "motors = \"live\"\n",
-    "appendix = \"hover5\"\n",
+    "appendix = \"hover8\"\n",
     "\n",
     "calib_method = \"on_the_fly\"\n",
     "mics = [0, 1, 2, 3]\n",
@@ -656,29 +656,43 @@
     "algorithm = \"bayes\" #\"cost\" #\"bayes\"\n",
     "\n",
     "wall_y_cm = 100\n",
+    "azimuth_deg = WALL_ANGLE_DEG\n",
     "\n",
     "results_df = pd.read_pickle(f\"../datasets/{exp_name}/all_data.pkl\")\n",
     "row = results_df.loc[\n",
     "    (results_df.appendix == appendix) & (results_df.motors == motors), :\n",
     "].iloc[0]\n",
     "\n",
-    "distances, freqs, magnitudes, positions_cm, yaws_deg = extract_valid(row, \n",
-    "                                                                     wall_y_cm=wall_y_cm, \n",
-    "                                                                     forward_only=False)\n",
+    "#distances, freqs, magnitudes, positions_cm, yaws_deg = extract_valid(row, \n",
+    "#                                                                     wall_y_cm=wall_y_cm, \n",
+    "#                                                                     forward_only=False)\n",
+    "positions_cm = row.positions[:, :3] * 1e2\n",
+    "flying = positions_cm[:, 2] > FLYING_HEIGHT_CM\n",
+    "positions_cm = positions_cm[flying, :]\n",
+    "yaws_deg = row.positions[flying, 3]\n",
+    "freqs = row.frequencies_matrix[0, :]\n",
+    "magnitudes = np.abs(row.stft[flying][:, :, freqs>0])\n",
+    "freqs = freqs[freqs > 0]\n",
+    "times = row.seconds[flying]\n",
+    "\n",
+    "# because wall is at 90 degrees.\n",
+    "# TODO: make this statement more general\n",
+    "distances = wall_y_cm - positions_cm[:, 1]\n",
+    "\n",
     "angles_deg = MovingEstimator.ANGLES_DEG\n",
     "dists_cm = MovingEstimator.DISTANCES_CM\n",
-    "n_timesteps = len(distances) #-1\n",
+    "n_timesteps = magnitudes.shape[0] #-1\n",
     "\n",
     "wall_backend = WallBackend(use_isam=True)\n",
     "d_estimates = []\n",
     "angle_estimates = []\n",
     "\n",
-    "calib_values = np.median(magnitudes[:n_calib, :, :], axis=0)\n",
-    "std_values = np.std(magnitudes[:n_calib, :, :], axis=0)\n",
+    "calib_values = np.median(magnitudes[:N_CALIBRATION, :, :], axis=0)\n",
+    "std_values = np.std(magnitudes[:N_CALIBRATION, :, :], axis=0)\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "fig.set_size_inches(FIGSIZE, FIGSIZE)\n",
-    "plot_positions(ax, positions_cm, wall_y_cm=wall_y_cm)\n",
+    "plot_positions(ax, positions_cm[positions_cm[:, 2] > FLYING_HEIGHT_CM], wall_y_cm=wall_y_cm)\n",
     "plot_name = f\"plots/experiments/{exp_name}{appendix}_positions.pdf\"\n",
     "#save_fig(fig, plot_name)\n",
     "\n",
@@ -687,18 +701,14 @@
     "\n",
     "magnitudes_calib = magnitudes / calib_values\n",
     "\n",
-    "print(len(angles_deg))\n",
     "results_matrix_angles = np.full((len(angles_deg), n_timesteps), np.nan)\n",
     "results_matrix_moving = np.full((len(dists_cm), n_timesteps), np.nan)\n",
     "\n",
     "moving_estimator = MovingEstimator(n_window=n_window)\n",
     "for i in range(n_timesteps):\n",
-    "    rel_dist = 0#5\n",
-    "    inf_machine.add_data(\n",
-    "        magnitudes_calib[i],\n",
-    "        freqs,\n",
-    "        distances=-np.linspace(0, rel_dist, len(freqs)),\n",
-    "    )\n",
+    "    position_cm = positions_cm[i, :] \n",
+    "    \n",
+    "    inf_machine.add_data(magnitudes_calib[i], freqs)\n",
     "\n",
     "    t1 = time.time()\n",
     "    diff_dict = {}\n",
@@ -718,17 +728,19 @@
     "    results_matrix_moving[:, i] = prob_moving_dist\n",
     "    results_matrix_angles[:, i] = prob_moving_angle\n",
     "\n",
-    "    if i < n_calib:\n",
+    "    if i < N_CALIBRATION:\n",
     "        d_estimates.append(None)\n",
     "        angle_estimates.append(None)\n",
     "        continue\n",
+    "    \n",
+    "    #print(f\"treating new signal at time {times[i]}\")\n",
     "        \n",
     "    # factor graph inference\n",
-    "    position_cm = positions_cm[i, :] - positions_cm[n_calib, :]\n",
     "    yaw = yaws_deg[i] / 180 * np.pi\n",
+    "    #print(f\"pose raw message: {position_cm*1e-2, yaws_deg[i]}\")\n",
     "    \n",
     "    #print(f\"adding pose: {yaws_deg[i]:.1f} deg, ({position_cm[0]:.0f}, {position_cm[1]:.0f}) cm\")\n",
-    "    pose_factor = wall_backend.add_pose(r_world=position_cm * 1e-2,  yaw=yaw)\n",
+    "    pose_factor = wall_backend.add_pose(r_world=position_cm * 1e-2,  yaw=yaw, verbose=True)\n",
     "    #wall_backend.add_planes_from_distributions(dists_cm, prob_moving_dist, angles_deg, prob_moving_angle, n_estimates=1, verbose=True)\n",
     "    wall_backend.add_plane_from_distances(dists_cm, prob_moving_dist, verbose=True)\n",
     "    #wall_backend.check_wall(verbose=True)\n",
@@ -741,11 +753,11 @@
     "gt_angles = np.full(results_matrix_angles.shape[1], 90)\n",
     "fig, ax = plot_matrix(angles_deg, results_matrix_angles, gt_angles, no_deco=no_deco, angles=True, log=False)\n",
     "ax.scatter(np.arange(len(angle_estimates)), angle_estimates, color='r')\n",
-    "add_rect(ax, n_calib, max(angles_deg), no_deco=no_deco)\n",
+    "add_rect(ax, N_CALIBRATION, max(angles_deg), no_deco=no_deco)\n",
     "\n",
     "fig, ax = plot_matrix(dists_cm, results_matrix_moving, distances[:n_timesteps], no_deco=no_deco)\n",
     "ax.scatter(np.arange(len(d_estimates)), d_estimates, color='r')\n",
-    "add_rect(ax, n_calib, max(dists_cm), no_deco=no_deco)\n",
+    "add_rect(ax, N_CALIBRATION, max(dists_cm), no_deco=no_deco)\n",
     "#save_fig(fig, plot_name + f\"_win{n_window}_probabilities.pdf\")"
    ]
   },
